<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014 Microsoft Mobile and/or its subsidiary(-ies).
    See the license text file delivered with this project for more information.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Typically, an application registers automatically, so options below
         are disabled. Uncomment them if you want to manually register or
         unregister the device (you will also need to uncomment the equivalent
         options on DemoActivity.onOptionsItemSelected())
    -->
    <item
        android:id="@+id/options_register"
        android:title="@string/options_register">
    </item>
    <item
        android:id="@+id/options_unregister"
        android:title="@string/options_unregister">
    </item>
    <item
        android:id="@+id/options_set_app_id"
        android:title="@string/options_set_app_id">
    </item>
    <item
        android:id="@+id/options_clear"
        android:title="@string/options_clear">
    </item>
    <item
        android:id="@+id/options_exit"
        android:title="@string/options_exit">
    </item>

</menu>